--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
+    <!--<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pomoapp</title>
   </head>
   <body>
     <div id="app"></div>
-    <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+    <!--<script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>-->
   </body>
 </html>
