Started integrating Auth0 authentication

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Pomoapp</title>
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://cdn.auth0.com/js/lock/10.6/lock.min.js"></script>
   </body>
 </html>
