--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://cdn.auth0.com/w2/auth0-7.4.min.js"></script>
     <script src="https://cdn.auth0.com/js/lock/10.6/lock.min.js"></script>
   </body>
 </html>
